Sun Feb  7 14:12:32 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb: Fixing parameter passing.
	(with Kimihito Matsui)

Sun Feb  7 11:44:03 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb: New classes CaseMapping/CaseMappingDummy
	  to pass as parameters; not yet implemented or used.
	(with Kimihito Matsui)

Sun Feb  7 10:43:27 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	(this commit message applies to the previous commit)
	* common.mk: explicit recipe for enc/unicode/casefold.h

	* enc/unicode/case-folding.rb: Adding -m option to prepare for using
	  multiple data files.
	(with Kimihito Matsui)

Sat Feb  6 22:30:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/cgi/util.rb (escapeHTML, unescapeHTML): consider
	  ASCII-incompatible encodings.  [Fix GH-1239]

Sat Feb  6 15:18:28 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_regex_casefold.rb: Added data-based testing for
	  String#downcase :fold.

	* enc/unicode.c: Fixed a range error (lowest non-ASCII character affected
	  by case operations is U+00B5, MICRO SIGN)

	* test/ruby/enc/test_case_mapping.rb: Explicit test for case folding of
	  MICRO SIGN to Greek mu.
	(with Kimihito Matsui)

Sat Feb  6 14:51:23 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_regex_casefold.rb: Tests for three case folding
	  primitives (mbc_case_fold, get_case_fold_codes_by_str,
	  apply_all_case_fold) in the various encodings. Currently only known
	  good encodings are tested to avoid test failures. For bug hunting,
	  start by adding more encodings with
	      generate_test_casefold encoding
	  (with Kimihito Matsui)

Sat Feb  6 14:37:16 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c, test/ruby/enc/test_case_mapping.rb: Implemented :fold
	  option for String#downcase by using case folding data from
	  regular expression engine, and added a few simple tests.
	  (with Kimihito Matsui)
